# balbes

./: .env.dev  .env.dev.example  .env.example  .env.prod  .env.prod.example  .env.test  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  ENVIRONMENTS.md  MULTI_ENV_QUICKSTART.md  Makefile  OVERVIEW.md  PROJECT_GUIDE.md  README.md  README.ru.md  RELEASE_CHECKLIST.md  SOLUTION.md  STAGE2_REPORT.md  STAGE2_SUMMARY.md  STAGE3_SUMMARY.md  STAGE3_TESTS_COMPLETE.md  STAGE4_COMPLETE.md  STAGE4_SUMMARY.md  STAGE4_TESTS_COMPLETE.md  STAGE5_SUMMARY.md  STAGE7_SUMMARY.md  STAGE8_SUMMARY.md  STAGE8_TESTS_COMPLETE.md  TODO.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
.cursor/rules/: logs-locations.mdc
config/: base_instructions.yaml.example  providers.yaml  providers.yaml.example  schedules.example.yaml  schedules.yaml
config/agents/: balbes.yaml  blogger.yaml
docs/: AGENTS_GUIDE.md  CONFIGURATION.md  DATA_MODELS.md  DEVELOPMENT_PLAN.md  FAQ.md  INDEX.md  MVP_SCOPE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ROADMAP.md  SUMMARY.md  TECHNICAL_SPEC.md
docs/en/: AGENTS_GUIDE.md  CONFIGURATION.md  DEPLOYMENT.md  GETTING_STARTED.md  IDENTITY_AND_OPENROUTER_USER.md  README.md
docs/ru/: AGENTS_GUIDE.md  API_SPECIFICATION.md  ARCHITECTURE_DECISIONS.md  ATTACHMENTS.md  CONFIGURATION.md  DEPLOYMENT.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  IDENTITY_AND_OPENROUTER_USER.md  LOGS.md  MAX_WEBHOOK.md  README.md  TODO.md  WEBHOOK_NOTIFY.md
scripts/: backup_memory.sh  create_structure.sh  demo_multi_env.sh  diagnose_telegram_stack.sh  diagnostic.sh  export_chats_for_agent.sh  export_memory_chats_to_data_for_agent.py  healthcheck.sh  init_db.py  max_send_test.py  max_subscriptions.py  prefetch_whisper.py  restart_prod.sh  run_second_orchestrator_bot.example.sh  seed_skills.py  setup_memory_repo.sh  start_all.sh  start_dev.sh  start_prod.sh  start_test.sh  status.sh  status_all_envs.sh  stop_all.sh  stop_dev.sh  stop_prod.sh  stop_test.sh  telegram_html_smoke.py  test_web_search.py  validate_config.py
services/blogger/: Dockerfile  __init__.py  agent.py  anonymizer.py  business_bot.py  main.py  post_queue.py  publisher.py  reader.py  requirements.txt
services/coder/: README.md  __init__.py  agent.py  coder_llm.py  main.py  requirements.txt
services/memory-service/: .env.example  CHECKLIST.md  QUICKSTART.md  README.md  STAGE2_COMPLETE.md  __init__.py  main.py  requirements.txt
services/orchestrator/: README.md  __init__.py  agent.py  agent_logger.py  main.py  notifications.py  requirements.txt  telegram_bot.py  tools.py  workspace.py
services/skills-registry/: .env.example  QUICKSTART.md  README.md  main.py  requirements.txt
services/web-backend/: README.md  (+4 more)
shared/: __init__.py  agent_base.py  agent_execute_contract.py  agent_manifest.py  agent_schedules.py  chart_render.py  config.py  document_extract.py  exceptions.py  geometry_render.py  identity_client.py  image_gen_models.py  image_generation.py  max_api.py  max_bot_ui.py  max_format_outbound.py  max_inbound.py  max_webhook.py  models.py  openrouter_http.py  solution_render.py  user_media.py  utils.py  vision_models.py
tests/: conftest.py  test_e2e.py  test_main.py  test_performance.py
web-frontend/: .env.example  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+110 files in other folders)
