[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balbes"
version = "0.1.0"
description = "Clean Python starter project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
balbes = "balbes.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
