[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balbes"
version = "0.1.0"
description = "Clean Python starter project."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pre-commit>=3.8.0",
  "ruff>=0.6.0",
]

[project.scripts]
balbes = "balbes.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
